@@ -147,7 +147,8 @@ template<typename TYPE> struct no_null
  * and from_string support.
  *
  * String conversions are not meant to work for nulls.  Check for null before
- * converting a value of @c TYPE to a string, or vice versa.
+ * converting a value of @c TYPE to a string, or vice versa, and handle them
+ * separately.
  */
 template<typename TYPE> struct string_traits
 {
@@ -213,7 +214,7 @@ template<typename TYPE> struct string_traits
   [[nodiscard]] static inline std::size_t
   size_buffer(TYPE const &value) noexcept;
 
-  // TODO: Move is_unquoted_string into the traits after all?
+  // TODO: Move is_unquoted_safe into the traits after all?
 };
 
 
