@@ -5,6 +5,8 @@
  - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
  - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
  - Fix error-reporting crash in non-blocking connection constructor. (#894)
+ - Fix buffer overrun when converting array containing nulls to string. (#906)
+ - Fix nullness check for `std::optional` containing a nullable value. (#907)
 7.9.2
  - Fix CMake documentation install. (#848)
  - More CMake build fix. (#869)
